Deployment configuration updates

--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -3,9 +3,10 @@ runtime: python311
 build:
   commands:
     build:
+      - pip install --upgrade pip
       - pip install -r requirements.txt
 run:
-  runtime-version: 3.11.9
+  runtime-version: 3.11
   command: uvicorn app.main:app --host 0.0.0.0 --port 8000
   network:
     port: 8000
