--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -1,19 +1,19 @@
 version: 1.0
-runtime: python311
+runtime: python3
 build:
   commands:
     build:
-      - pip install --upgrade pip
-      - pip install -r requirements.txt
+      - echo "Python version:" && python --version
+      - echo "Upgrading pip..." && pip install --upgrade pip
+      - echo "Installing requirements..." && pip install -r requirements.txt --verbose
+      - echo "Verifying installation..." && pip list
 run:
-  runtime-version: 3.11
+  runtime-version: 3.12
   command: uvicorn app.main:app --host 0.0.0.0 --port 8000
   network:
     port: 8000
     env: PORT
   env:
-    - name: API_KEY
-      value: "your-secure-api-key-here"
     - name: HOST
       value: "0.0.0.0"
     - name: PORT
