Fix App Runner configuration

--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -3,12 +3,10 @@ runtime: python311
 build:
   commands:
     build:
-      - echo "Python version:" && python --version
-      - echo "Upgrading pip..." && pip install --upgrade pip
-      - echo "Installing requirements..." && pip install -r requirements.txt --verbose
-      - echo "Verifying installation..." && pip list
+      - pip3 install --upgrade pip
+      - pip3 install -r requirements.txt
 run:
-  runtime-version: 3.11.12
+  runtime-version: 3.11
   command: uvicorn app.main:app --host 0.0.0.0 --port 8000
   network:
     port: 8000
