--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -8,6 +8,9 @@ build:
 run:
   runtime-version: 3.11
   command: python3 -m uvicorn app.main:app --host 0.0.0.0 --port 8000
+  pre-run:
+    - pip3 install --upgrade pip
+    - pip3 install -r requirements.txt
   network:
     port: 8000
     env: PORT
